force-app/main/default/objects/Work_Policy__c/Work_Policy__c.object-meta.xml
<CustomObject>
    <label>Work Policy</label>
    <nameField>
        <label>Work Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Policy</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>