force-app/main/default/objects/Work_Policy__c/fields/Annual_Leave_Standard__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Standard__c</fullName>
    <label>Annual Leave Standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>