force-app/main/default/objects/Work_Policy__c/fields/DateResetLastYearLeave__c.field-meta.xml
<CustomField>
    <fullName>DateResetLastYearLeave__c</fullName>
    <label>Date Reset Last Year Leave</label>
    <type>Date</type>
</CustomField>