force-app/main/default/objects/Work_Policy__c/fields/Friday_End__c.field-meta.xml
<CustomField>
    <fullName>Friday_End__c</fullName>
    <label>Friday End</label>
    <type>Time</type>
</CustomField>