force-app/main/default/objects/Work_Policy__c/fields/Friday_Start__c.field-meta.xml
<CustomField>
    <fullName>Friday_Start__c</fullName>
    <label>Friday Start</label>
    <type>Time</type>
</CustomField>