force-app/main/default/objects/Work_Policy__c/fields/Monday_Start__c.field-meta.xml
<CustomField>
    <fullName>Monday_Start__c</fullName>
    <label>Monday Start</label>
    <type>Time</type>
</CustomField>