force-app/main/default/objects/Work_Policy__c/fields/Saturday_End__c.field-meta.xml
<CustomField>
    <fullName>Saturday_End__c</fullName>
    <label>Saturday End</label>
    <type>Time</type>
</CustomField>