force-app/main/default/objects/Work_Policy__c/fields/Saturday_Start__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Start__c</fullName>
    <label>Saturday Start</label>
    <type>Time</type>
</CustomField>