force-app/main/default/objects/Work_Policy__c/fields/Sunday_End__c.field-meta.xml
<CustomField>
    <fullName>Sunday_End__c</fullName>
    <label>Sunday End</label>
    <type>Time</type>
</CustomField>