force-app/main/default/objects/Work_Policy__c/fields/Thursday_end__c.field-meta.xml
<CustomField>
    <fullName>Thursday_end__c</fullName>
    <label>Thursday End</label>
    <type>Time</type>
</CustomField>