force-app/main/default/objects/Work_Policy__c/fields/Thursday_Start__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Start__c</fullName>
    <label>Thursday Start</label>
    <type>Time</type>
</CustomField>