force-app/main/default/objects/Work_Policy__c/fields/Tuesday_Start__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Start__c</fullName>
    <label>Tuesday Start</label>
    <type>Time</type>
</CustomField>