force-app/main/default/objects/Work_Policy__c/fields/Wednesday_End__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_End__c</fullName>
    <label>Wednesday End</label>
    <type>Time</type>
</CustomField>