force-app/main/default/objects/Work_Policy__c/fields/Working_Hours_monday__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_monday__c</fullName>
    <formula>(Monday_End__c - Monday_Start__c)/(60*1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Hours monday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>